objects/Lead/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>&lt;=25</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>26-44</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>45-64</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>&gt;=65</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>