objects/Lead/fields/Agent_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Agent_Identifier__c</fullName>
    <label>Agent Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>