objects/Lead/fields/Agent_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Agent_Relationship__c</fullName>
    <label>Relationship (with Agent)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Acquaintances</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Familiar</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Very familiar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>