objects/Lead/fields/App_Contact_Identifier__c.field-meta.xml
<CustomField>
    <fullName>App_Contact_Identifier__c</fullName>
    <label>App Contact Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>