objects/Lead/fields/Customer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Customer Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>