objects/Lead/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <label>Family Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Single - no kids</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Single - with kids</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Married - no kids</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Married - with kids</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>