objects/Lead/fields/Link_Up__c.field-meta.xml
<CustomField>
    <fullName>Link_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link Up</label>
    <referenceTo>External_Lead__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>ExternalLeads</relationshipName>
    <type>Lookup</type>
</CustomField>