objects/Lead/fields/Personal_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Personal_Remarks__c</fullName>
    <label>Personal Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>