objects/Lead/fields/qualtrics__Last_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__Last_Survey_Response__c</fullName>
    <label>Last Survey Response</label>
    <type>Date</type>
</CustomField>