objects/Lead/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <label>Salary Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>&lt;= HK$10,000</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>HK$10,001-HK$24,999</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>HK$25,000-HK$49,999</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>&gt;=HK$50,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>