objects/Lead/recordTypes/Agent_Lead.recordType-meta.xml
<RecordType>
    <fullName>Agent_Lead</fullName>
    <active>true</active>
    <businessProcess>SAM - Agent Lead Process</businessProcess>
    <label>Agent Lead</label>
</RecordType>